--- a/flowgen/Cargo.toml
+++ b/flowgen/Cargo.toml
@@ -1,4 +1,14 @@
 [package]
 name = "flowgen"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+license.workspace = true
+edition.workspace = true
+publish.workspace = true
+
+[lib]
+name = "flowgen"
+path = "src/lib.rs"
+
+[dependencies]
+tonic = { version = "0.10.2", features = ["tls-roots"] }
