--- a/flowgen/Cargo.toml
+++ b/flowgen/Cargo.toml
@@ -12,8 +12,8 @@ path = "src/main.rs"
 [dependencies]
 serde_avro_fast = "1.1.2"
 oauth2 = "4.4.2"
-flowgen_core = { path = "../components/core" }
-flowgen_salesforce = { path = "../components/salesforce" }
+flowgen_core = { git = "https://gitlab.com/connve/platform/flowgen.git" }
+flowgen_salesforce = { git = "https://gitlab.com/connve/platform/flowgen.git" }
 prost = "0.12.3"
 reqwest = { version = "0.11.23", features = ["json", "stream"] }
 serde = { version = "1.0.195", features = ["derive"] }
