Creates nats component

--- a/flowgen/Cargo.toml
+++ b/flowgen/Cargo.toml
@@ -18,6 +18,7 @@ deltalake = { version = "0.21.0", features = [
 # flowgen_salesforce = { git = "https://gitlab.com/connve/platform/flowgen.git" }
 flowgen_core = { path = "../components/core" }
 flowgen_salesforce = { path = "../components/salesforce" }
+flowgen_nats = { path = "../components/nats" }
 prost = "0.12.3"
 reqwest = { version = "0.11.23", features = ["json", "stream"] }
 serde = { version = "1.0.195", features = ["derive"] }
