--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [workspace]
-members = ["flowgen", "examples/event-relay", "examples/event-store"]
+members = ["flowgen", "bin/event-relay", "bin/event-store"]
 resolver = "2"
 exclude = [".cargo"]
 
 [workspace.dependencies]
 flowgen_salesforce = { path = "components/salesforce" }
 flowgen_google = { path = "components/google" }
+flowgen_nats = { path = "components/nats" }
 flowgen_core = { path = "components/core" }
 
 [workspace.package]
