Reverting back removal of git submodules

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ build-event-relay:
   variables:
     SERVICE_NAME: event-relay
   script:
+    - chmod +x ./scripts/*.sh
     - ./scripts/build.sh
     - echo "$CI_JOB_TOKEN" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
     - docker build -t $CI_REGISTRY_IMAGE/$SERVICE_NAME:latest -f docker/Dockerfile . --build-arg SERVICE_NAME=$SERVICE_NAME
