--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -15,7 +15,8 @@ tonic = { version = "0.10.2", features = ["tls-roots"] }
 arrow = "53.3.0"
 async-nats = "0.35.1"
 salesforce_pubsub = { path = "../salesforce_pubsub" }
-
-
+bincode = "1.3.3"
 thiserror = "1.0.63"
 url = "2.5.2"
+bytes = "1.9.0"
+serde = { version = "1.0.195", features = ["derive"] }
