--- a/crates/salesforce/Cargo.toml
+++ b/crates/salesforce/Cargo.toml
@@ -27,6 +27,7 @@ url = "2.5.2"
 flowgen_core = { path = "../core" }
 salesforce_pubsub = { path = "../salesforce_pubsub" }
 bincode = "1.3.3"
+tracing = "0.1.41"
 
 [build-dependencies]
 tonic-build = "0.10.2"
