--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -22,3 +22,4 @@ bytes = "1.9.0"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = { version = "1.0.111" }
 handlebars = { workspace = true }
+arrow-json = { workspace = true }
