Introduction of flowgen_generate source

--- a/flowgen/Cargo.toml
+++ b/flowgen/Cargo.toml
@@ -15,6 +15,7 @@ oauth2 = "4.4.2"
 flowgen_core = { path = "../crates/core" }
 flowgen_deltalake = { path = "../crates/deltalake" }
 flowgen_http = { path = "../crates/http" }
+flowgen_generate = { path = "../crates/generate" }
 flowgen_salesforce = { path = "../crates/salesforce" }
 flowgen_file = { path = "../crates/file" }
 flowgen_nats = { path = "../crates/nats" }
