--- a/crates/deltalake/Cargo.toml
+++ b/crates/deltalake/Cargo.toml
@@ -23,5 +23,5 @@ thiserror = { workspace = true }
 chrono = { workspace = true }
 tracing = { workspace = true }
 serde = { workspace = true }
-deltalake = { version = "0.25", features = ["datafusion"] }
-deltalake-gcp = "0.9.0"
+deltalake = { workspace = true }
+deltalake-gcp = { workspace = true }
