Update flow and processor base structure

--- a/flowgen-worker/salesforce/Cargo.toml
+++ b/flowgen-worker/salesforce/Cargo.toml
@@ -29,3 +29,4 @@ chrono = { workspace = true }
 tracing = { workspace = true }
 bytes = { workspace = true }
 apache-avro = { workspace = true }
+reqwest = { workspace = true }
