--- a/flowgen-worker/core/Cargo.toml
+++ b/flowgen-worker/core/Cargo.toml
@@ -28,3 +28,4 @@ chrono = { workspace = true }
 tracing = { workspace = true }
 futures-util = { workspace = true }
 regex = { workspace = true }
+serde_avro_fast = { workspace = true }
