Make build-push dependent on the test

--- a/.github/workflows/test-build-push.yml
+++ b/.github/workflows/test-build-push.yml
@@ -50,6 +50,7 @@ jobs:
         cargo fmt --all
 
   build-and-push:
+    needs: [test-rust-latest, test-rust-nightly]
     runs-on: ubuntu-latest
     permissions:
       contents: read
