--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 exclude = [".cargo"]
 
 [workspace.package]
-version = "0.3.0"
+version = "0.4.0"
 authors = ["CONNVE"]
 license = "MPL-2.0"
 edition = "2021"
@@ -34,7 +34,7 @@ tonic = { version = "0.10.2", features = ["tls-roots"] }
 deltalake = { version = "0.25", features = ["datafusion"] }
 deltalake-gcp = "0.9.0"
 config = "0.15.11"
-serde_avro_fast = "1.1.2"
+serde_avro_fast = "2.0.0"
 oauth2 = "4.4.2"
 prost = "0.12.3"
 glob = "0.3.1"
@@ -45,3 +45,4 @@ base64 = "0.22"
 async-trait = "0.1"
 kube = { version = "0.99", features = ["runtime", "derive"] }
 k8s-openapi = { version = "0.24", features = ["v1_32"] }
+rhai = { version = "1.20", features = ["sync", "serde"] }
