--- a/examples/salesforce/query/salesforce_bulkapi_query_account_retrieve.yaml
+++ b/examples/salesforce/query/salesforce_bulkapi_query_account_retrieve.yaml
@@ -11,16 +11,23 @@ flow:
             enabled: true
             managed_subscription: false
             name: "account_salesforce_pubsub_subscriber_bulk_api_jobs"
-
+    # Filter out valid partial and final results.
+    - script:
+        name: "filter_valid_events"
+        code: |
+          if event.data.ResultType == "FINAL" ||  event.data.ResultType == "PARTIAL"  {
+            event
+          }
+    # Download and generate events from bulkapi jobs.
     - salesforce_bulkapi_job_retriever:
         name: "account_salesforce_query_job_retrieve___2"
         job_type: "query"
         credentials_path: "/etc/sfdc/credentials.json"
-
+    # Publish results to NATS.
     - nats_jetstream_publisher:
         name: "account_nats_jetstream_publisher_salesforce_query_job_retrieve"
         label: "account_nats_jetstream_publisher_salesforce_query_job_retrieve"
-        credentials_path: "/etc/nats/credentials.json"
+        credentials_path: /etc/nats/credentials.json
         subject: bulkapiretrieve.account.>
         stream:
           create_or_update: true
@@ -31,3 +38,4 @@ flow:
           max_age_secs: 86400
           retention: "limits"
           discard_policy: "old"
+          
