--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 exclude = [".cargo"]
 
 [workspace.package]
-version = "0.20.0"
+version = "0.21.0"
 authors = ["CONNVE"]
 license = "MPL-2.0"
 edition = "2021"
@@ -49,3 +49,4 @@ rhai = { version = "1.20", features = ["sync", "serde"] }
 tokio-retry = { version = "0.3" }
 humantime = { version = "2.1" }
 humantime-serde = { version = "1.1" }
+croner = { version = "3.0.1" }
