--- a/flowgen-worker/core/Cargo.toml
+++ b/flowgen-worker/core/Cargo.toml
@@ -34,3 +34,5 @@ k8s-openapi = { workspace = true }
 async-trait = { workspace = true }
 rhai = { workspace = true }
 tokio-retry = { workspace = true }
+croner = { workspace = true }
+humantime-serde = { workspace = true }
